css fix for language switcher on mobile

--- a/public/stylesheets/cgtpd.css
+++ b/public/stylesheets/cgtpd.css
@@ -30,7 +30,7 @@ ul+form legend>h2.heading-medium {
 }
 
 /* clearing the floated language toggle */
-.full-width .content__body:before {
+.content__body:before {
     content: " ";
     visibility: hidden;
     display: block;
